<resources>
    <string name="app_name">Tanishka shop</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="use_email_for_registration">Use Email For Registration</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up1">Sign up</string>
    <string name="use_registered_email_for_login">Use Registered Email For Login</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="signing_in">signing in</string>
</resources>