<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_main"
    android:layout_height="match_parent"
    tools:context=".signing_activity">
    <ImageView
        android:id="@+id/create_account_logo"
        android:layout_width="215dp"
        android:layout_height="197dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@drawable/splash_screen_logo">

    </ImageView>

    <TextView
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="SIGNING IN"
        android:textColor="#fff"
        android:textSize="34sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/user_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/use_registered_email_for_login"
        android:textColor="#fff"
        android:textSize="16sp">

    </TextView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:elevation="11dp"
        app:cardCornerRadius="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="15dp"
            android:inputType="text"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="normal" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:elevation="11dp"
        app:cardCornerRadius="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:inputType="numberPassword"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="normal" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/signing_in"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="end"
        android:backgroundTint="#01B4BF"
        android:text="@string/signing_in"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</LinearLayout>